# image-segmentation

./: .gitignore  Dockerfile  README.md  add-node.sh  docker-compose.yml  gen-ssh.sh  init-vpn.sh  init.sh  services.sh  start-main.sh  start-worker.sh
mpi/: .gitignore  CMakeLists.txt
mpi/src/: img-seg.cc  parallel-rank.cc
parallel-rank/: CMakeLists.txt  README.md
parallel-rank/src/: Makefile  main.cpp
server/: index.js
server/public/: index.html
